fix(theme): fix unintended alignment change for icons in card header
`.card-header .icon` will also affect everything in nested components,
including search-bar, content-action-bar, etc.

Move the special case to the si-card component where it's used.

--- a/projects/element-ng/card/si-card.component.scss
+++ b/projects/element-ng/card/si-card.component.scss
@@ -1,6 +1,6 @@
 @use 'sass:map';
 
-@use '@siemens/element-theme/src/styles/variables';
+@use '@siemens/element-theme/src/styles/variables/spacers';
 
 :host {
   &.card-horizontal {
@@ -35,6 +35,11 @@
   inline-size: 50%;
   object-fit: var(--si-card-img-object-fit, scale-down);
   object-position: var(--si-card-img-object-position, left center);
+}
+
+.card-header ::ng-deep .icon[headerIcon] {
+  // The icon would be 8px too high without this.
+  margin-block: - map.get(spacers.$spacers, 2);
 }
 
 .card-content-split {
